# learnable-triangulation-pytorch

./: pyproject.toml  requirements.txt  train.py
experiments/human36m/eval/: human36m_vol_softmax.yaml
mvn/datasets/human36m_preprocessing/: collect-bboxes.py  generate-labels-npy-multiview.py
